1.7.0 [201x-xx-xx]
 - Generalize ufc interface to non-affine parameterized coordinates
 - Add ufc::coordinate_mapping class
 - Make ufc interface depend on C++11 features requiring gcc version >= 4.8
1.6.0 [2015-07-28]
 - Rename and modify a number of UFC interface functions. See docstrings in ufc.h for details.
 - Bump required SWIG version to 3.0.3
 - Disable dual basis (tabulate_coordinates and evaluate_dofs) for enriched
   elements until correct implementation is brought up
1.5.0 [2015-01-12]
 - Remove FErari support
 - Add support for new integral type custom_integral
 - Support for new form compiler backend "uflacs", downloaded separately
1.4.0 [2014-06-02]
 - Add support for integrals that know which coefficients they use
 - Many bug fixes for facet integrals over manifolds
 - Merge UFC into FFC; ChangeLog for UFC appended below
 - Various updates mirroring UFL changes
 - Experimental: New custom integral with user defined quadrature points
1.3.0 [2014-01-07]
 - Fix bug with runtime check of SWIG version
 - Move DOLFIN wrappers here from DOLFIN
 - Add support for new UFL operators cell_avg and facet_avg
 - Add new reference data handling system, now data is kept in an external repository
 - Fix bugs with ignoring quadrature rule arguments
 - Use cpp optimization by default in jit compiler
1.2.0 [2013-03-24]
 - New feature: Add basic support for point integrals on vertices
 - New feature: Add general support for m-dimensional cells in n-dimensional space (n >= m, n, m = 1, 2, 3)
1.1.0 [2013-01-07]
 - Fix bug for Conditionals related to DG constant Coefficients. Bug #1082048.
 - Fix bug for Conditionals, precedence rules for And and Or. Bug #1075149.
 - Changed data structure from list to deque when pop(0) operation is needed, speeding up split_expression operation considerable
 - Other minor fixes
1.0.0 [2011-12-07]
 - Issue warning when form integration requires more than 100 points
1.0-rc1 [2011-11-28]